--- a/lectures/6/index.html
+++ b/lectures/6/index.html
@@ -14,8 +14,8 @@
 
    ====================END =================================-->
 
-    <!--<link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">-->
-    <!--<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css">-->
+    <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -28,33 +28,30 @@
                 <h1> Favorite Movies </h1>
             </div>
             <span class="article-overview">
-                by <a href="https://github.com/your_username">Your Name </a> <span class="pipe"> | </span>
+                by <a href="https://github.com/your_username">shahzad miraj </a> <span class="pipe"> | </span>
                 <span class="text-muted"> <i class="fas fa-lock"></i> Private </span>
             </span>
             <div class="lister-list">
                 <div class="lister-item">
                     <div class="lister-item-image">
                         <a href="#">
-                            <img src="images/your_movie_image_name" alt="your_movie_name">
+                            <img src="images/image1.jpg" alt="your_movie_name">
                         </a>
                     </div>
                     <div class="lister-item-content">
                         <h3 class="lister-item-header">
-                            <a href="#">Movie Name 1</a>
-                            <span class="lister-item-year text-muted">(0000)</span>
+                            <a href="#">Planet Earth II</a>
+                            <span class="lister-item-year text-muted">(2016)</span>
                         </h3>
                         <p class="text-muted text-small">
                             <i class="fas fa-star"></i> 0.0
                             <span class="pipe">|</span>
-                            <span><i class="fas fa-clock"></i> 000 min</span>
+                            <span><i class="fas fa-clock"></i> 600 min</span>
                             <span class="pipe">|</span>
                             <span><i class="fas fa-film"></i> Genre1, Genre2, Genre3 </span>
                         </p>
                         <p class="lister-item-summary">
-                            paste here the description of your selected favorite movie,
-                            paste here the description of your selected favorite movie,
-                            paste here the description of your selected favorite movie,
-                            paste here the description of your selected favorite movie
+                            David Attenborough returns in this breathtaking documentary showcasing life on Planet Earth.
                         </p>
                         <p class="text-muted text-small">
                             Director:
@@ -78,30 +75,27 @@
                 <div class="lister-item">
                     <div class="lister-item-image">
                         <a href="#">
-                            <img src="images/your_movie_image_name" alt="your_movie_name">
+                            <img src="images/image2.jpg" alt="your_movie_name">
                         </a>
                     </div>
                     <div class="lister-item-content">
                         <h3 class="lister-item-header">
-                            <a href="#">Movie Name 2</a>
-                            <span class="lister-item-year text-muted">(0000)</span>
+                            <a href="#">Game of Thrones</a>
+                            <span class="lister-item-year text-muted">(2018)</span>
                         </h3>
                         <p class="text-muted text-small">
                             <i class="fas fa-star"></i> 0.0
                             <span class="pipe">|</span>
-                            <span><i class="fas fa-clock"></i> 000 min</span>
+                            <span><i class="fas fa-clock"></i> 80 min</span>
                             <span class="pipe">|</span>
                             <span><i class="fas fa-film"></i> Genre1, Genre2, Genre3 </span>
                         </p>
                         <p class="lister-item-summary">
-                            paste here the description of your selected favorite movie,
-                            paste here the description of your selected favorite movie,
-                            paste here the description of your selected favorite movie,
-                            paste here the description of your selected favorite movie
+                            Nine noble families fight for control over the mythical lands of Westeros, while an ancient enemy returns after being dormant for thousands of years.
                         </p>
                         <p class="text-muted text-small">
                             Director:
-                            <a href="#">Director Name</a>
+                            <a href="#">fiuz helz</a>
                             <span class="pipe">|</span>
                             Stars:
                             <a href="#">Star1</a>,
