--- a/lectures/6/index.html
+++ b/lectures/6/index.html
@@ -28,90 +28,87 @@
                 <h1> Favorite Movies </h1>
             </div>
             <span class="article-overview">
-                by <a href="https://github.com/14muhammad">Muhammad Ali Makhdoom </a> <span class="pipe"> | </span>
+                by <a href="https://github.com/your_username">shahzad miraj </a> <span class="pipe"> | </span>
                 <span class="text-muted"> <i class="fas fa-lock"></i> Private </span>
             </span>
             <div class="lister-list">
                 <div class="lister-item">
                     <div class="lister-item-image">
                         <a href="#">
-                            <img src="images/inception.jpg" alt="inception">
+                            <img src="images/image1.jpg" alt="your_movie_name">
                         </a>
                     </div>
                     <div class="lister-item-content">
                         <h3 class="lister-item-header">
-                            <a href="#">Inception</a>
-                            <span class="lister-item-year text-muted">(2010)</span>
+                            <a href="#">Planet Earth II</a>
+                            <span class="lister-item-year text-muted">(2016)</span>
                         </h3>
                         <p class="text-muted text-small">
-                            <i class="fas fa-star"></i> 8.8
+                            <i class="fas fa-star"></i> 0.0
                             <span class="pipe">|</span>
-                            <span><i class="fas fa-clock"></i> 148 min</span>
+                            <span><i class="fas fa-clock"></i> 600 min</span>
                             <span class="pipe">|</span>
-                            <span><i class="fas fa-film"></i> Action, Adventure, Sci-Fi </span>
+                            <span><i class="fas fa-film"></i> Genre1, Genre2, Genre3 </span>
                         </p>
                         <p class="lister-item-summary">
-                            A thief who steals corporate secrets through the use
-                            of dream-sharing technology is given the inverse task of planting an idea into the mind of a CEO.
+                            David Attenborough returns in this breathtaking documentary showcasing life on Planet Earth.
                         </p>
                         <p class="text-muted text-small">
                             Director:
-                            <a href="#">Christopher Nolan</a>
+                            <a href="#">Director Name</a>
                             <span class="pipe">|</span>
                             Stars:
-                            <a href="#">Leonardo DiCaprio</a>,
-                            <a href="#">Joseph Gordon-Levitt</a>,
-                            <a href="#">Ellen Page</a>,
-                            <a href="#">Ken Watanabe</a>
+                            <a href="#">Star1</a>,
+                            <a href="#">Star2</a>,
+                            <a href="#">Star3</a>,
+                            <a href="#">Star4</a>
                         </p>
                         <p class="text-muted text-small">
                             <i class="fas fa-thumbs-up"></i>
-                            <span>1,761,048</span>
+                            <span>000000</span>
                             <span class="pipe">|</span>
                             <i class="fas fa-dollar-sign"></i>
-                            <span>292.58M</span>
+                            <span>000.00M</span>
                         </p>
                     </div>
                 </div>
                 <div class="lister-item">
                     <div class="lister-item-image">
                         <a href="#">
-                            <img src="images/separation.jpg" alt="separation">
+                            <img src="images/image2.jpg" alt="your_movie_name">
                         </a>
                     </div>
                     <div class="lister-item-content">
                         <h3 class="lister-item-header">
-                            <a href="#">A Separation</a>
-                            <span class="lister-item-year text-muted">(2011)</span>
+                            <a href="#">Game of Thrones</a>
+                            <span class="lister-item-year text-muted">(2018)</span>
                         </h3>
                         <p class="text-muted text-small">
-                            <i class="fas fa-star"></i> 8.3
+                            <i class="fas fa-star"></i> 0.0
                             <span class="pipe">|</span>
-                            <span><i class="fas fa-clock"></i> 123 min </span>
+                            <span><i class="fas fa-clock"></i> 80 min</span>
                             <span class="pipe">|</span>
-                            <span><i class="fas fa-film"></i> Crime, Drama, Family </span>
+                            <span><i class="fas fa-film"></i> Genre1, Genre2, Genre3 </span>
                         </p>
                         <p class="lister-item-summary">
-                            A married couple are faced with a difficult decision - to improve the life of their
-                            child by moving to another country or to stay in Iran and look after a deteriorating parent
-                            who has Alzheimer's disease.
+                            Nine noble families fight for control over the mythical lands of Westeros, while an ancient enemy returns after being dormant for thousands of years.
                         </p>
                         <p class="text-muted text-small">
                             Director:
-                            <a href="#">Asghar Farhadi</a>
+                            <a href="#">fiuz helz</a>
                             <span class="pipe">|</span>
                             Stars:
-                            <a href="#">Payman Maadi</a>,
-                            <a href="#">Leila Hatami</a>,
-                            <a href="#">Sareh Bayat</a>,
-                            <a href="#">Shahab Hosseini</a>
+                            <a href="#">Star1</a>,
+                            <a href="#">Star2</a>,
+                            <a href="#">Star3</a>,
+                            <a href="#">Star4</a>
                         </p>
                         <p class="text-muted text-small">
                             <i class="fas fa-thumbs-up"></i>
-                            <span>187,453</span>
+                            <span>000000</span>
                             <span class="pipe">|</span>
                             <i class="fas fa-dollar-sign"></i>
-                            <span>7.10M</span>
+                            <span>000.00M</span>
                         </p>
                     </div>
                 </div>
