--- a/Login_form.html
+++ b/Login_form.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
     <link rel="stylesheet" href="signup-signin.css">
 </head>
 <body>
