--- a/Forget_password.html
+++ b/Forget_password.html
@@ -4,17 +4,36 @@
     <meta charset="UTF-8">
     <title>Forget_Password</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-
-    <link rel="stylesheet" href="signup-signin.css">
+    <meta name="description" content="Forget Password form">
+    <meta name="author" content="Ghulam Hussain">
+    <meta name="keywords" content="HTML, CSS">
+    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/signup-signin.css">
 </head>
 <body>
+<div  class="row">
+    <div class="col-lg-12 col-md-12">
+        <img src="images/movie@.jpg" width="100" height="80">
+    </div>
+    <div class="header col-lg-12 col-md-12">
+        <div class="header-left">
+            <a href="Home.html">Home</a>
+            <a href="#contact">Contact_us</a>
+            <a href="#about">About_us</a>
+            <a href="Signup_form.html">Create new Account</a>
+        </div>
+
+    </div>
+</div>
+<hr>
 <form>
     <div class="container">
     <label for="email"><b>Email</b></label>
     <input type="text" name="email" placeholder="Enter your Email" required>
 
     <label for="pas"><b>Password</b></label>
-    <input type="text" name="pas" placeholder="Enter your Password" required>
+    <input type="text" name="pas" placeholder="Enter your New Password" required>
 
     <label for="con_pas"><b>Confirm Password</b></label>
     <input type="text" name="con_pas" placeholder="Confirm Password" required>
@@ -24,5 +43,9 @@
     </div>
     </div>
 </form>
+<div class="footer">
+    <a href="#about">About_us</a>
+    <a href="#contact">Contact_us</a>
+</div>
 </body>
 </html>
