--- a/Login_form.html
+++ b/Login_form.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <title>Login</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-
-    <link rel="stylesheet" href="signup-signin.css">
+    <meta name="description" content="Login in Account">
+    <meta name="author" content="Ghulam Hussain">
+    <meta name="keywords" content="HTML, CSS">
+    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/signup-signin.css">
 </head>
 <body>
+<div  class="row">
+    <div class="col-lg-12 col-md-12">
+        <img src="images/movie@.jpg" width="100" height="80">
+    </div>
+    <div class="header col-lg-12 col-md-12">
+        <div class="header-left">
+            <a href="Home.html">Home</a>
+            <a href="#contact">Contact_us</a>
+            <a href="#about">About_us</a>
+            <a href="Signup_form.html">Create new Account</a>
+        </div>
+
+    </div>
+</div>
+<hr>
 <form action="action_page.php" style="border: 1px solid #ccc">
     <div class="container">
         <h1>
@@ -21,6 +40,8 @@
         <label for="psw"><b>Password</b></label>
         <input type="password" placeholder="Enter Password" name="psw" required>
 
+        <a href="Forget_password.html">Forget_Password?</a>
+
         <div class="clearfix">
             <button type="submit" class="cancelbtn">Login</button>
         </div>
@@ -28,5 +49,9 @@
     </div>
 </form>
 
+<div class="footer">
+    <a href="#about">About_us</a>
+    <a href="#contact">Contact_us</a>
+</div>
 </body>
 </html>
