--- a/Signup_form.html
+++ b/Signup_form.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <title>Signupform</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" href="signup-signin.css">
+    <meta name="description" content="Registration Form">
+    <meta name="author" content="Ghulam Hussain">
+    <meta name="keywords" content="HTML, CSS">
+    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/signup-signin.css">
 </head>
 <body>
+<div  class="row">
+    <div class="col-lg-12">
+        <img src="images/movie@.jpg" width="100" height="80">
+    </div>
+    <div class="header col-lg-12">
+        <div class="header-left">
+            <a href="Home.html">Home</a>
+            <a href="#contact">Contact_us</a>
+            <a href="#about">About_us</a>
+            <a href="Login_form.html">Login</a>
+        </div>
 
+    </div>
+</div>
+<hr>
 <form action="action_page.php" style="border: 1px solid #ccc">
     <div class="container">
         <h1>
@@ -56,6 +75,9 @@
 
     </div>
 </form>
-
+<div class="footer">
+    <a href="#about">About_us</a>
+    <a href="#contact">Contact_us</a>
+</div>
 </body>
 </html>
