I make contact_form. I make some changes in other file too.

--- a/Home.html
+++ b/Home.html
@@ -21,7 +21,7 @@
     <div class="header col-lg-12 col-md-12 col-sm-12">
     <div  class="header-left">
         <a href="Home.html">Home</a>
-        <a href="#contact">Contact_us</a>
+        <a href="Contact_form.html">Contact_us</a>
         <a href="#about">About_us</a>
         <a href="Login_form.html">Login</a>
     </div>
@@ -78,7 +78,7 @@
 </div>
     <div class="footer">
         <a href="#about">About_us</a>
-        <a href="#contact">Contact_us</a>
+        <a href="Contact_form.html">Contact_us</a>
     </div>
 </div>
 
