--- a/Login_form.html
+++ b/Login_form.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/signup-signin.css">
 </head>
 <body>
+<div class="container">
 <div  class="row">
     <div class="col-lg-12 col-md-12">
         <img src="images/movie@.jpg" width="100" height="80">
@@ -19,7 +20,7 @@
     <div class="header col-lg-12 col-md-12">
         <div class="header-left">
             <a href="Home.html">Home</a>
-            <a href="#contact">Contact_us</a>
+            <a href="Contact_form.html">Contact_us</a>
             <a href="#about">About_us</a>
             <a href="Signup_form.html">Create new Account</a>
         </div>
@@ -28,7 +29,7 @@
 </div>
 <hr>
 <form action="action_page.php" style="border: 1px solid #ccc">
-    <div class="container">
+
         <h1>
             Login
         </h1>
@@ -46,12 +47,13 @@
             <button type="submit" class="cancelbtn">Login</button>
         </div>
 
-    </div>
+
 </form>
 
 <div class="footer">
     <a href="#about">About_us</a>
-    <a href="#contact">Contact_us</a>
+    <a href="Contact_form.html">Contact_us</a>
+</div>
 </div>
 </body>
 </html>
