--- a/Contact_form.html
+++ b/Contact_form.html
@@ -27,7 +27,7 @@
     </div>
 </div>
 <hr>
-<form action="action_page.php" style="border: 1px solid #ccc">
+<form action="action_page.php">
 
     <h1>
             Contact
