--- a/Signup_form.html
+++ b/Signup_form.html
@@ -28,7 +28,7 @@
     </div>
 </div>
 <hr>
-<form action="action_page.php" style="border: 1px solid #ccc">
+<form action="action_page.php">
 
         <h1>
             Sign Up
