I make some changes in file.

--- a/Home.html
+++ b/Home.html
@@ -30,23 +30,23 @@
 <hr>
     <h2>Trailers</h2>
     <div class="row" >
-        <div col-lg-4>
+        <div class="column col-lg-4 col-md-6 col-sm-12">
            <a href="https://www.youtube.com/watch?v=QZ40WlshNwU">
-               <img src="images/Salt.jpg" width="300" height="300"><br>
+               <img src="images/Salt.jpg" width="250" height="250"><br>
                <h3>Salt</h3>
            </a>
 
         </div>
-        <div col-lg-4>
+        <div class="column col-lg-4 col-md-6 col-sm-12">
             <a href="https://www.youtube.com/watch?v=wPxqcq6Byq0">
-                <img src="images/sultan.jpg" width="300" height="300"><br>
+                <img src="images/sultan.jpg" width="250" height="250"><br>
                 <h3>Sultan</h3>
             </a>
 
         </div>
-        <div col-lg-4>
+        <div  class="column col-lg-4 col-md-6 col-sm-12">
             <a href="https://www.youtube.com/watch?v=x_7YlGv9u1g">
-                <img src="images/dangal.jpg" width="300" height="300"><br>
+                <img src="images/dangal.jpg" width="250" height="250"><br>
                 <h3>Dangal</h3>
             </a>
 
