about us page added

--- a/Forget_password.html
+++ b/Forget_password.html
@@ -20,8 +20,8 @@
     <div class="header col-lg-12 col-md-12">
         <div class="header-left">
             <a href="Home.html">Home</a>
-            <a href="Contact_form.html">Contact_us</a>
-            <a href="#about">About_us</a>
+            <a href="Contact_form.html">Contact us</a>
+            <a href="about_us.html">About us</a>
             <a href="Signup_form.html">Create new Account</a>
         </div>
 
@@ -45,8 +45,8 @@
 
 </form>
 <div class="footer">
-    <a href="#about">About_us</a>
-    <a href="Contact_form.html">Contact_us</a>
+    <a href="about_us.html">About us</a>
+    <a href="Contact_form.html">Contact us</a>
 </div>
 </div>
 </body>
