--- a/Home.html
+++ b/Home.html
@@ -21,8 +21,8 @@
     <div class="header col-lg-12 col-md-12 col-sm-12">
     <div  class="header-left">
         <a href="Home.html">Home</a>
-        <a href="Contact_form.html">Contact_us</a>
-        <a href="#about">About_us</a>
+        <a href="Contact_form.html">Contact us</a>
+        <a href="about_us.html">About us</a>
         <a href="Login_form.html">Login</a>
     </div>
     </div>
@@ -77,7 +77,7 @@
 
 </div>
     <div class="footer">
-        <a href="#about">About_us</a>
+        <a href="about_us.html">About_us</a>
         <a href="Contact_form.html">Contact_us</a>
     </div>
 </div>
