--- a/Contact_form.html
+++ b/Contact_form.html
@@ -20,8 +20,8 @@
     <div class="header col-lg-12 col-md-12">
         <div class="header-left">
             <a href="Home.html">Home</a>
-            <a href="Contact_form.html">Contact_us</a>
-            <a href="#about">About_us</a>
+            <a href="Contact_form.html">Contact us</a>
+            <a href="about_us.html">About us</a>
         </div>
 
     </div>
@@ -49,7 +49,7 @@
 
 </form>
     <div class="footer">
-        <a href="#about">About_us</a>
+        <a href="about_us.html">About us</a>
         <a href="Contact_form.html">Contact_us</a>
     </div>
 </div>
