--- a/Login_form.html
+++ b/Login_form.html
@@ -5,7 +5,7 @@
     <title>Login</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="Login in Account">
-    <meta name="author" content="Ghulam Hussain">
+    <meta name="author" content="Danial Anwaar">
     <meta name="keywords" content="HTML, CSS">
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/bootstrap.css">
