--- a/Signup_form.html
+++ b/Signup_form.html
@@ -2,84 +2,75 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Signupform</title>
+    <title>Sign up here</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="description" content="Registration Form">
-    <meta name="author" content="Ghulam Hussain">
     <meta name="keywords" content="HTML, CSS">
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/signup-signin.css">
 </head>
 <body>
-<div class="container">
-<div  class="row">
-    <div class="col-lg-12">
-        <img src="images/movie@.jpg" width="100" height="80">
+<div class="Container">
+    <div class="row">
+    <div class="col-md-6 col-md-offset-3" id="form">
+    <center><b class="signup"> Sign Up Form </b></center>
+    <form>
+        <div class="form_detail">
+        <label class="username"> Firstname: </label>
+        <input type="text" name="Firstname" class="form-control name" placeholder="Enter Firstname">
     </div>
-    <div class="header col-lg-12">
-        <div class="header-left">
-            <a href="Home.html">Home</a>
-            <a href="Contact_form.html">Contact_us</a>
-            <a href="#about">About_us</a>
-            <a href="Login_form.html">Login</a>
+        <div class="form_detail">
+            <label class="username"> Lastname: </label>
+            <input type="text" name="Lastname" class="form-control name" placeholder="Enter Lastname">
+
+
+        </div>
+        <div class="form_detail">
+            <label class="username"> Gender: </label>
+            <input type="text" name="Gender" class="form-control name" placeholder="Enter your Gender">
+
+
+        </div>
+        <div class="form_detail">
+            <label class="username"> DateOfBirth:</label>
+            <input type="date" name="DateOfBirth" class="form-control name" placeholder="dd/mm/yyyy">
+
+
+        </div>
+        <div class="form_detail">
+            <label class="username"> Email: </label>
+            <input type="text" name="Email" class="form-control name" placeholder="Enter Email">
+
+
+        </div>
+        <div class="form_detail">
+            <label class="username"> Password: </label>
+            <input type="password" name="Password" class="form-control name" placeholder="Enter Password">
+
+
         </div>
 
-    </div>
-</div>
-<hr>
-<form action="action_page.php">
-
-        <h1>
-            Sign Up
-        </h1>
-        <p>Please fill in this form to create an account.</p>
-        <hr>
-
-        <label for="firstname"><b>Firstname</b></label>
-        <input type="text" placeholder="Enter Firstname" name="firstname" required>
-
-        <label for="lastname"><b>Lastname</b></label>
-        <input type="text" placeholder="Enter Lastname" name="lastname" required>
-
-        <label for="email"><b>Email</b></label>
-        <input type="text" placeholder="Enter Email" name="email" required>
-
-        <label for="psw"><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="psw" required>
-
-        <label for="psw-repeat"><b>Repeat Password</b></label>
-        <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
-
-        <b>Select Gender:</b><br>
-        <label for="male">Male</label>
-        <input type="radio" name="gender" id="male" value="male" checked>
-        <br>
-        <label for="female">Female</label>
-        <input type="radio" name="gender" id="female" value="female">
-        <br>
-        <br>
-
-        <label for="birthday"><b>Birthday</b></label>
-        <input type="date" name="birthday"><br><br>
-        <label>
-            <input type="checkbox" checked="checked" name="remember"
-                   style="margin-bottom:15px"> Remember me
-        </label>
-
-        <p>By Creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a> </p>
-
-        <div class="clearfix">
-            <button type="button" class="cancelbtn">Cancel</button>
-            <button type="submit" class="cancelbtn">Sign Up</button>
+        <div class="form_detail">
+            <label class="username"> Confirm Password: </label>
+            <input type="password" name="Confirm Password" class="form-control name" placeholder="Confirm Password">
         </div>
 
 
-</form>
-<div class="footer">
-    <a href="#about">About_us</a>
-    <a href="Contact_form.html">Contact_us</a>
+        <div class="form-detail">
+        <label class="add">Address:</label>
+        <textarea class="area" rows="6" placeholder="Enter Your Address"></textarea>
+        </div>
+
+
+        <div class="form-group">
+        <input type="submit" class="btn btn-primary" value="submit">
+            <input type="reset" class="btn btn-danger" value="reset">
+        </div>
+    </form>
+    </div>
+    </div>
+
 </div>
-</div>
+
 </body>
 </html>
